:apple: 管道方式批量获取

--- a/doc/2-1.md
+++ b/doc/2-1.md
@@ -24,3 +24,8 @@ Redis优点：
 - 单核
 
 
+## 雪崩预防
+- 用不过期 不会造成成片的大面积失效
+- 过期时间错开 让key过期时间错峰
+- 多缓存结合 redis和Memcache缓存结合 （redis -> Memcache -> DB）
+- 采购第三方的Redis
